--- a/src/components/Lightbox.scss
+++ b/src/components/Lightbox.scss
@@ -87,8 +87,8 @@ $activeColor: rgb(255, 255, 255);
         }
 
         .lightbox-img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 95vw;
+            max-height: 95vh;
             @include flex(column, center, center);
             transform-origin: center;
             object-fit: contain !important;
